--- a/css/style.css
+++ b/css/style.css
@@ -1133,6 +1133,10 @@ input::placeholder {
   align-items: center;
   justify-content: space-between;
 }
+.header-top__center {
+  display: flex;
+  align-items: center;
+}
 
 .header-bottom__inner {
   background-color: #9ac354;
@@ -1154,6 +1158,7 @@ input::placeholder {
 .nav {
   display: flex;
   align-items: center;
+  margin-right: 50px;
 }
 .nav__item {
   font-size: 16px;
@@ -1208,6 +1213,22 @@ input::placeholder {
   width: 199px;
 }
 
+@media screen and (max-width: 1240px) {
+  .header__logo {
+    width: 191px;
+  }
+  .header__lang {
+    width: 34px;
+    height: 34px;
+  }
+  .header__lang img {
+    width: 14px;
+  }
+
+  .nav {
+    margin-right: 20px;
+  }
+}
 .error-404 {
   height: 100%;
   padding: 120px 0 100px;
