--- a/scss/header.css
+++ b/scss/header.css
@@ -275,6 +275,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between; }
+.header-top__center {
+  display: flex;
+  align-items: center; }
 
 .header-bottom__inner {
   background-color: #9ac354;
@@ -292,7 +295,8 @@
 
 .nav {
   display: flex;
-  align-items: center; }
+  align-items: center;
+  margin-right: 50px; }
   .nav__item {
     font-size: 16px;
     font-weight: 400;
@@ -334,5 +338,17 @@
         border: 1px solid #bfddbd;
         border-radius: 2px;
         width: 199px; }
+
+@media screen and (max-width: 1240px) {
+  .header__logo {
+    width: 191px; }
+  .header__lang {
+    width: 34px;
+    height: 34px; }
+    .header__lang img {
+      width: 14px; }
+
+  .nav {
+    margin-right: 20px; } }
 
 /*# sourceMappingURL=header.css.map */
