--- a/scss/reset.css
+++ b/scss/reset.css
@@ -79,7 +79,8 @@ body {
   font-family: 'Rubik', sans-serif;
   font-weight: 400;
   height: 100%;
-  color: #000; }
+  color: #252525;
+  overflow-x: hidden; }
   body.fixed-body {
     overflow-y: hidden; }
 
