--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -98,7 +98,8 @@ body {
     font-family: 'Rubik', sans-serif;
     font-weight: 400;
     height: 100%;
-    color: #000;
+    color: #252525;
+    overflow-x: hidden;
     &.fixed-body {
         overflow-y: hidden;
     }
