--- a/scss/ux.css
+++ b/scss/ux.css
@@ -52,6 +52,60 @@ input::placeholder {
 .btn-rounded {
   border-radius: 24.5px; }
 
+.card {
+  padding: 26px 22px 29px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  border: 1px solid transparent;
+  transition: all .3s; }
+  .card:hover {
+    border: 1px solid #9ac354; }
+    .card:hover .card__title {
+      color: #4f924b; }
+  .card__img {
+    height: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .card__img img {
+      max-height: 100%;
+      max-width: 100%; }
+  .card__title {
+    font-size: 13px;
+    line-height: 19px;
+    font-weight: 400;
+    color: #272727;
+    height: 76px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    margin-top: 23px; }
+  .card__num {
+    font-size: 10px;
+    font-weight: 400;
+    color: #b0b0b0;
+    margin-top: 23px; }
+
+.card--prod:hover {
+  border: 1px solid #b27544; }
+  .card--prod:hover .card__title {
+    color: #9c6336; }
+
+p {
+  font-size: 14px;
+  line-height: 24px;
+  color: #272727;
+  margin-bottom: 10px; }
+  p strong {
+    font-weight: 500; }
+  p a {
+    text-decoration: underline;
+    color: #4f924b; }
+    p a:hover {
+      background-color: #4f924b;
+      color: #fff; }
+
 .ccalc {
   display: flex;
   align-items: center;
@@ -133,198 +187,6 @@ input::placeholder {
         top: 7px;
         left: 0; }
 
-.card {
-  background-color: #fff;
-  padding-bottom: 20px;
-  position: relative; }
-  .card:hover {
-    box-shadow: 0px 7px 10px 0px rgba(165, 121, 45, 0.12); }
-    .card:hover .card__content {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      background-color: #fff;
-      height: calc(100% - 50px);
-      padding: 75px 24px 20px;
-      z-index: 2; }
-    .card:hover .card__title {
-      font-size: 16px;
-      line-height: 22px;
-      height: 44px; }
-    .card:hover .card__desc {
-      display: block; }
-    .card:hover .card__info {
-      display: flex; }
-    .card:hover .card__favourite {
-      width: 129px; }
-      .card:hover .card__favourite span {
-        display: block; }
-  .card__calc {
-    width: 95px; }
-    .card__calc button {
-      height: 27px;
-      width: 27px;
-      font-size: 14px;
-      line-height: 16px; }
-    .card__calc input {
-      width: calc(100% - 54px);
-      font-size: 14px;
-      line-height: 18px; }
-  .card__spicy {
-    position: absolute;
-    top: 19px;
-    right: 19px;
-    z-index: 3;
-    display: flex; }
-    .card__spicy:hover {
-      cursor: pointer; }
-      .card__spicy:hover:before, .card__spicy:hover:after {
-        opacity: 1; }
-    .card__spicy:before {
-      content: attr(data-tooltip);
-      position: absolute;
-      z-index: 3;
-      width: 63px;
-      height: 19px;
-      background-color: #ff232d;
-      border-radius: 9.5px;
-      font-size: 8px;
-      font-weight: 700;
-      letter-spacing: 0.2em;
-      color: #ffffff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      bottom: 100%;
-      left: 50%;
-      transform: translateX(-50%);
-      margin-bottom: 8px;
-      opacity: 0; }
-    .card__spicy:after {
-      content: '';
-      position: absolute;
-      z-index: 1;
-      width: 11px;
-      height: 3px;
-      bottom: 100%;
-      left: 50%;
-      transform: translateX(-50%);
-      background-image: url(../images/triangle.png);
-      margin-bottom: 5px;
-      opacity: 0; }
-  .card__meat {
-    position: absolute;
-    top: 19px;
-    left: 19px;
-    z-index: 3; }
-  .card__top {
-    height: 245px; }
-    .card__top img {
-      width: 100%;
-      height: 100%; }
-  .card__title {
-    font-size: 14px;
-    line-height: 20px;
-    font-weight: 500;
-    text-transform: uppercase;
-    color: #663618;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    height: 40px; }
-    .card__title:hover {
-      color: #c19d5f; }
-  .card__desc {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 5;
-    -webkit-box-orient: vertical;
-    height: 95px;
-    font-size: 13px;
-    line-height: 19px;
-    font-weight: 400;
-    color: #3d3d3d;
-    margin-top: 15px;
-    display: none; }
-  .card__info {
-    display: flex;
-    align-items: center;
-    display: none;
-    margin-top: 20px; }
-    .card__info span {
-      font-size: 13px;
-      font-weight: 400;
-      color: #292929;
-      margin-right: 16px; }
-    .card__info strong {
-      display: flex;
-      align-items: center;
-      font-size: 11px;
-      font-weight: 500;
-      color: #000000; }
-      .card__info strong svg {
-        margin-right: 7px; }
-  .card__content {
-    padding-left: 15px;
-    padding-right: 15px;
-    position: absolute;
-    z-index: 2;
-    top: 260px;
-    width: 100%; }
-  .card__bottom {
-    margin-top: 74px;
-    padding: 0 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    z-index: 2; }
-  .card__cart {
-    width: 95px;
-    height: 30px;
-    font-size: 11px;
-    font-weight: 700; }
-  .card__prices {
-    display: flex;
-    align-items: flex-end; }
-  .card__price {
-    font-size: 26px;
-    font-weight: 700;
-    color: #cb1a1a;
-    margin-right: 10px; }
-    .card__price-old {
-      font-size: 16px;
-      font-weight: 700;
-      text-decoration: line-through;
-      color: #88785c; }
-  .card__favourite {
-    position: absolute;
-    height: 32px;
-    width: 32px;
-    background-color: #ffffff;
-    border: 1px solid #edeae8;
-    border-radius: 16px;
-    top: 19px;
-    left: 19px;
-    display: flex;
-    align-items: center;
-    font-size: 10px;
-    line-height: 28px;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: #0b0b0b;
-    z-index: 3;
-    padding: 0; }
-    .card__favourite svg {
-      position: absolute;
-      top: -1px;
-      left: -1px; }
-    .card__favourite span {
-      display: none;
-      padding-left: 35px;
-      padding-right: 20px; }
-
 .pagination {
   display: flex;
   align-items: center;
@@ -384,13 +246,39 @@ input::placeholder {
 .red-star {
   color: #c19d5f; }
 
-@media screen and (max-width: 1300px) {
-  .card__top {
-    height: 230px; } }
 @media screen and (max-width: 992px) {
+  .btn {
+    font-size: 9px; }
+
+  .btn-link-to-page i {
+    width: 20px;
+    height: 20px;
+    margin-left: 15px; }
+    .btn-link-to-page i svg {
+      width: 4px;
+      height: auto; }
+
+  p {
+    font-size: 12px;
+    line-height: 18px;
+    margin-bottom: 5px; }
+
   .pagination {
     margin-top: 25px; } }
 @media screen and (max-width: 768px) {
+  .card {
+    padding: 14px 13px 20px; }
+    .card__img {
+      height: 95px; }
+    .card__title {
+      font-size: 10px;
+      line-height: 14px;
+      margin-top: 18px;
+      height: 56px; }
+    .card__num {
+      font-size: 8px;
+      margin-top: 10px; }
+
   .back-link {
     font-size: 14px; }
     .back-link svg {
@@ -410,87 +298,6 @@ input::placeholder {
       .breadcrumbs__item:not(:first-child):before {
         top: 5px; }
 
-  .card {
-    padding-bottom: 15px; }
-    .card:hover .card__title {
-      font-size: 12px;
-      line-height: 13px;
-      height: 14px;
-      -webkit-line-clamp: 1; }
-    .card:hover .card__favourite {
-      width: 90px;
-      font-size: 8px; }
-      .card:hover .card__favourite span {
-        padding-left: 25px;
-        padding-right: 7px; }
-    .card:hover .card__content {
-      padding: 40px 11px 20px;
-      height: calc(100% - 35px); }
-    .card__desc {
-      margin-top: 4px;
-      font-size: 11px;
-      line-height: 14px;
-      height: 70px; }
-    .card__info {
-      margin-top: 10px; }
-      .card__info span {
-        font-size: 11px;
-        margin-right: 12px; }
-      .card__info strong {
-        font-size: 10px; }
-      .card__info svg {
-        width: 10px; }
-    .card__top {
-      height: 180px; }
-    .card__meat {
-      left: 12px;
-      top: 12px; }
-    .card__spicy {
-      top: 12px;
-      right: 12px; }
-    .card__favourite {
-      height: 22px;
-      width: 22px;
-      top: 12px;
-      left: 12px; }
-      .card__favourite svg {
-        width: 22px;
-        height: 22px; }
-    .card__spicy, .card__meat {
-      width: 22px;
-      height: 22px; }
-      .card__spicy svg, .card__meat svg {
-        width: 100%;
-        height: 100%; }
-    .card__content {
-      top: 190px;
-      padding: 0 11px; }
-    .card__title {
-      font-size: 12px;
-      line-height: 15px;
-      height: 30px; }
-    .card__bottom {
-      margin-top: 40px;
-      padding-left: 11px;
-      padding-right: 11px; }
-    .card__price {
-      font-size: 14px; }
-      .card__price-old {
-        font-size: 12px; }
-    .card__cart {
-      width: 61px;
-      height: 17px;
-      font-size: 8px; }
-    .card__calc {
-      width: 64px; }
-      .card__calc input {
-        width: 30px;
-        font-size: 10px; }
-      .card__calc button {
-        width: 17px;
-        height: 17px;
-        font-size: 10px; }
-
   .pagination__item {
     width: 35px;
     height: 35px;
@@ -505,16 +312,5 @@ input::placeholder {
   .pagination__btn--prev {
     margin-right: 20px;
     margin-left: 0; } }
-@media screen and (max-width: 576px) {
-  .card__prices {
-    display: block; }
-  .card__price {
-    margin-right: 0; }
-    .card__price-old {
-      margin-top: 3px; }
-  .card__top {
-    height: 130px; }
-  .card__content {
-    top: 140px; } }
 
 /*# sourceMappingURL=ux.css.map */
