--- a/scss/ux.scss
+++ b/scss/ux.scss
@@ -79,6 +79,75 @@ input {
     border-radius: 24.5px;
 }
 
+.card {
+    padding: 26px 22px 29px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    border: 1px solid transparent;
+    transition: all .3s;
+    &:hover {
+        border: 1px solid #9ac354;
+        .card__title {
+            color: #4f924b;
+        }
+    }
+    &__img {
+        height: 170px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+            max-height: 100%;
+            max-width: 100%;
+        }
+    }
+    &__title {
+        font-size: 13px;
+        line-height: 19px;
+        font-weight: 400;
+        color: #272727;
+        height: 76px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        margin-top: 23px;
+    }
+    &__num {
+        font-size: 10px;
+        font-weight: 400;
+        color: #b0b0b0;
+        margin-top: 23px;
+    }
+}
+
+.card--prod {
+    &:hover {
+        border: 1px solid #b27544;
+        .card__title {
+            color: #9c6336;
+        }
+    }
+}
+
+p {
+    font-size: 14px;
+    line-height: 24px;
+    color: #272727;
+    margin-bottom: 10px;
+    strong {
+        font-weight: 500;
+    }
+    a {
+        text-decoration: underline;
+        color: #4f924b;
+        &:hover {
+            background-color: #4f924b;
+            color: #fff;
+        }
+    }
+}
+
 .ccalc {
     display: flex;
     align-items: center;
@@ -176,235 +245,6 @@ input {
     }
 }
 
-.card {
-    background-color: #fff;
-    padding-bottom: 20px;
-    position: relative;
-    &:hover {
-        box-shadow: 0px 7px 10px 0px rgba(165, 121, 45, 0.12);
-        .card__content {
-            position: absolute;
-            top: 0;
-            width: 100%;
-            background-color: #fff;
-            height: calc(100% - 50px);
-            padding: 75px 24px 20px;
-            z-index: 2;
-        }
-        .card__title {
-            font-size: 16px;
-            line-height: 22px;
-            height: 44px;
-        }
-        .card__desc {
-            display: block;
-        }
-        .card__info {
-            display: flex;
-        }
-        .card__favourite {
-            width: 129px;
-            span {
-                display: block;
-            }
-        }
-    }
-    &__calc {
-        width: 95px;
-        button {
-            height: 27px;
-            width: 27px;
-            font-size: 14px;
-            line-height: 16px;
-        }
-        input {
-            width: calc(100% - 54px);
-            font-size: 14px;
-            line-height: 18px;
-        }
-    }
-    &__spicy {
-        position: absolute;
-        top: 19px;
-        right: 19px;
-        z-index: 3;
-        display: flex;
-        &:hover {
-            cursor: pointer;
-            &:before,
-            &:after {
-                opacity: 1;
-            }
-        }
-        &:before {
-            content: attr(data-tooltip);
-            position: absolute;
-            z-index: 3;
-            width: 63px;
-            height: 19px;
-            background-color: #ff232d;
-            border-radius: 9.5px;
-            font-size: 8px;
-            font-weight: 700;
-            letter-spacing: 0.2em;
-            color: #ffffff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            bottom: 100%;
-            left: 50%;
-            transform: translateX(-50%);
-            margin-bottom: 8px;
-            opacity: 0;
-        }
-        &:after {
-            content: '';
-            position: absolute;
-            z-index: 1;
-            width: 11px;
-            height: 3px;
-            bottom: 100%;
-            left: 50%;
-            transform: translateX(-50%);
-            background-image: url(../images/triangle.png);
-            margin-bottom: 5px;
-            opacity: 0;
-        }
-    }
-    &__meat {
-        position: absolute;
-        top: 19px;
-        left: 19px;
-        z-index: 3;
-    }
-    &__top {
-        height: 245px;
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-    &__title {
-        font-size: 14px;
-        line-height: 20px;
-        font-weight: 500;
-        text-transform: uppercase;
-        color: #663618;
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        height: 40px;
-        &:hover {
-            color: #c19d5f;
-        }
-    }
-    &__desc {
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 5;
-        -webkit-box-orient: vertical;
-        height: 95px;
-        font-size: 13px;
-        line-height: 19px;
-        font-weight: 400;
-        color: #3d3d3d;
-        margin-top: 15px;
-        display: none;
-    }
-    &__info {
-        display: flex;
-        align-items: center;
-        display: none;
-        margin-top: 20px;
-        span {
-            font-size: 13px;
-            font-weight: 400;
-            color: #292929;
-            margin-right: 16px;
-        }
-        strong {
-            display: flex;
-            align-items: center;
-            font-size: 11px;
-            font-weight: 500;
-            color: #000000;
-            svg {
-                margin-right: 7px;
-            }
-        }
-    }
-    &__content {
-        padding-left: 15px;
-        padding-right: 15px;
-        position: absolute;
-        z-index: 2;
-        top: 260px;
-        width: 100%;
-    }
-    &__bottom {
-        margin-top: 74px;
-        padding: 0 15px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        position: relative;
-        z-index: 2;
-    }
-    &__cart {
-        width: 95px;
-        height: 30px;
-        font-size: 11px;
-        font-weight: 700;
-    }
-    &__prices {
-        display: flex;
-        align-items: flex-end;
-    }
-    &__price {
-        font-size: 26px;
-        font-weight: 700;
-        color: #cb1a1a;
-        margin-right: 10px;
-        &-old {
-            font-size: 16px;
-            font-weight: 700;
-            text-decoration: line-through;
-            color: #88785c;
-        }
-    }
-    &__favourite {
-        position: absolute;
-        // width: 129px;
-        height: 32px;
-        width: 32px;
-        background-color: #ffffff;
-        border: 1px solid #edeae8;
-        border-radius: 16px;
-        top: 19px;
-        left: 19px;
-        display: flex;
-        align-items: center;
-        font-size: 10px;
-        line-height: 28px;
-        font-weight: 700;
-        text-transform: uppercase;
-        color: #0b0b0b;
-        z-index: 3;
-        padding: 0;
-        svg {
-            position: absolute;
-            top: -1px;
-            left: -1px;
-        }
-        span {
-            display: none;
-            padding-left: 35px;
-            padding-right: 20px;
-        }
-    }
-}
-
 .pagination {
     display: flex;
     align-items: center;
@@ -478,21 +318,48 @@ input {
     color: #c19d5f;
 }
 
-@media screen and (max-width: 1300px) {
-    .card {
-        &__top {
-            height: 230px;
+@media screen and (max-width: 992px) {
+    .btn {
+        font-size: 9px;
+    }
+    .btn-link-to-page {
+        i {
+            width: 20px;
+            height: 20px;
+            margin-left: 15px;
+            svg {
+                width: 4px;
+                height: auto;
+            }
         }
     }
-}
-
-@media screen and (max-width: 992px) {
+    p {
+        font-size: 12px;
+        line-height: 18px;
+        margin-bottom: 5px;
+    }
     .pagination {
         margin-top: 25px;
     }
 }
 
 @media screen and (max-width: 768px) {
+    .card {
+        padding: 14px 13px 20px;
+        &__img {
+            height: 95px;
+        }
+        &__title {
+            font-size: 10px;
+            line-height: 14px;
+            margin-top: 18px;
+            height: 56px;
+        }
+        &__num {
+            font-size: 8px;
+            margin-top: 10px;
+        }
+    }
     .back-link {
         font-size: 14px;
         svg {
@@ -519,115 +386,6 @@ input {
             }
         }
     }
-    .card {
-        padding-bottom: 15px;
-        &:hover {
-            .card__title {
-                font-size: 12px;
-                line-height: 13px;
-                height: 14px;
-                -webkit-line-clamp: 1;
-            }
-            .card__favourite {
-                width: 90px;
-                font-size: 8px;
-                span {
-                    padding-left: 25px;
-                    padding-right: 7px;
-                }
-            }
-            .card__content {
-                padding: 40px 11px 20px;
-                height: calc(100% - 35px);
-            }
-        }
-        &__desc {
-            margin-top: 4px;
-            font-size: 11px;
-            line-height: 14px;
-            height: 70px;
-        }
-        &__info {
-            margin-top: 10px;
-            span {
-                font-size: 11px;
-                margin-right: 12px;
-            }
-            strong {
-                font-size: 10px;
-            }
-            svg {
-                width: 10px;
-            }
-        }
-        &__top {
-            height: 180px;
-        }
-        &__meat {
-            left: 12px;
-            top: 12px;
-        }
-        &__spicy {
-            top: 12px;
-            right: 12px;
-        }
-        &__favourite {
-            height: 22px;
-            width: 22px;
-            top: 12px;
-            left: 12px;
-            svg {
-                width: 22px;
-                height: 22px;
-            }
-        }
-        &__spicy,
-        &__meat {
-            width: 22px;
-            height: 22px;
-            svg {
-                width: 100%;
-                height: 100%;
-            }
-        }
-        &__content {
-            top: 190px;
-            padding: 0 11px;
-        }
-        &__title {
-            font-size: 12px;
-            line-height: 15px;
-            height: 30px;
-        }
-        &__bottom {
-            margin-top: 40px;
-            padding-left: 11px;
-            padding-right: 11px;
-        }
-        &__price {
-            font-size: 14px;
-            &-old {
-                font-size: 12px;
-            }
-        }
-        &__cart {
-            width: 61px;
-            height: 17px;
-            font-size: 8px;
-        }
-        &__calc {
-            width: 64px;
-            input {
-                width: 30px;
-                font-size: 10px;
-            }
-            button {
-                width: 17px;
-                height: 17px;
-                font-size: 10px;
-            }
-        }
-    }
     .pagination {
         &__item {
             width: 35px;
@@ -646,26 +404,6 @@ input {
         &__btn--prev {
             margin-right: 20px;
             margin-left: 0;
-        }
-    }
-}
-
-@media screen and (max-width: 576px) {
-    .card {
-        &__prices {
-            display: block;
-        }
-        &__price {
-            margin-right: 0;
-            &-old {
-                margin-top: 3px;
-            }
-        }
-        &__top {
-            height: 130px;
-        }
-        &__content {
-            top: 140px;
         }
     }
 }
